fixed image card issue not displaying correctly on mobile

--- a/src/components/category/category.styles.scss
+++ b/src/components/category/category.styles.scss
@@ -5,7 +5,7 @@
   align-content: space-evenly;
   width: 100vw;
   height: 300vh;
-  color: whitesmoke;
+  color: black;
   background-color: black;
 
   .categoryTitle {
