--- a/src/components/paintingCard/paintingCard.styles.scss
+++ b/src/components/paintingCard/paintingCard.styles.scss
@@ -1,28 +1,14 @@
-.paintingContainer  {
-  display: flex;
-  justify-items: center;
-  align-items: center;
-  align-content:space-between;
-  height: 100vh;
-  @media screen and (max-width: 768px) {
-    flex-direction: column;
-    height: 100vh;
-  }
-}
 
-.paintingContainer2 {
+.paintingContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 20px;
   width: 100vw;
   height: auto;
-  margin-top: 8vh;
   color: black;
   background-color: black;
-  z-index: 0;
-
 }
 
 .paintingText {
@@ -31,7 +17,7 @@
   font-weight: bold;
   text-align: center;
   @media screen and (max-width: 768px) {
-    font-size: 24px;
+    font-size: 20px;
   }
 }
 
@@ -45,28 +31,26 @@
   }
 }
 .paintingCard {
-
   padding: 25px;
   width: auto;
   color: whitesmoke;
   background-color: #835E4B;
   border-radius: 1em;
-  
   @media screen and (max-width: 768px) {
+    padding: 0;
     width: 20em;
     font-size: medium;
     margin: 1em;
   }
-}
-.paintingImage {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 1em;
-  @media screen and (max-width: 768px) {
-    width: 20em;
-    font-size: medium;
-    margin: 1em;
+  .paintingImage {
+    width: 100%;
+    height: auto;
+    border-radius: 1em;
+    @media screen and (max-width: 768px) {
+      width: 90%;
+      font-size: medium;
+      margin: 1em;
+    }
   }
 }
 .paintingButton {
@@ -83,9 +67,9 @@
     transform: scale(1.05);
   }
   @media screen and (max-width: 768px) {
-    width: 20em;
+    width: 90%;
     font-size: medium;
-    margin: 1em;
+    margin: .5em;
   }
 
 }
